Resolved card alignments

--- a/src/components/assignment/AssignmentCard.css
+++ b/src/components/assignment/AssignmentCard.css
@@ -56,6 +56,8 @@
   height: 95%;
   transition: all 0.3s ease;
   overflow: visible;/* Allow extension to overflow */
+  margin: 0;
+  flex-grow :1;
 }
 
 
