--- a/src/components/assignment/AssignmentRow.css
+++ b/src/components/assignment/AssignmentRow.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row; /* Changed from column to row */
   width: 75vw;
-  height: 250px;
+  height: 55vh;
   background-color: #3A3A3A;
   border-radius: 10px;
   overflow-x: visible;
@@ -57,7 +57,7 @@
     padding: 15px;
     overflow-y:hidden;
     overflow-x: auto;
-    flex: 1; /* Takes up remaining space */
+    /* flex: 1; Takes up remaining space */
     -webkit-overflow-scrolling: touch;
     scrollbar-width: thin;
     scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
@@ -110,6 +110,8 @@
 
 .rowContent {
   display: flex;
+  flex-direction: row; /* Changed from column to row */
+  align-items: center;
   gap: 15px;
   padding: 15px;
   overflow-x: auto;
